--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
   </footer>
 
-  <script src="js/javascript.js"></script>
+  <script src="javascript.js/javascript.js"></script>
 </body>
 
 </html>
