--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       щедрой природой. В России можно найти почти всё то, что встречает путешественник по отдельности в той или иной
       стране — солнечные пляжи субтропиков и снежные горные вершины, бескрайние степи и глухие леса, бурные реки и
       тёплые моря.</p>
-    <script type="text/javascript" charset="utf-8" async
+    <script type="text/javascript" charset="utf-8" async 
       src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Afba00651be8bbc6b3a355d8b36e7cbc6dba881fe8b22477fd84b9b478780ecc1&amp;width=951&amp;height=553&amp;lang=ru_RU&amp;scroll=true"></script>
     <h1 class="culture__title">Культура России</h1>
     <p class="cultural"><strong>Культура России</strong> — культура народов и народностей России; совокупность
@@ -90,12 +90,12 @@
       <button class="next-button2" aria-label="Посмотреть следующий слайд">&gt</button>
     </div>
     <button type="button" class="button" id="button"
-      onclick="console.log('Открывается диалоговое окно'); document.getElementById('myDialog').show();">Открой
+      onclick="console.log('Открывается диалоговое окно. Сделала не я'); document.getElementById('myDialog').show();">Открой
       меня</button>
     <dialog id="myDialog" class="call">
       <p class="dialog">Спасибо за внимание</p>
       <button type="button" id="button" class="redbutton"
-        onclick="console.log('Закрывается диалоговое окно'); document.getElementById('myDialog').close();">
+        onclick="console.log('Закрывается диалоговое окно. Сделала не я'); document.getElementById('myDialog').close();">
         Закрой меня
       </button>
     </dialog>
